[package]
name = "raw-window-metal"
version = "0.3.1"
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
edition = "2018"
description = "Interop library between Metal and raw-window-handle"
documentation = "https://docs.rs/raw-window-metal"
repository = "https://github.com/norse-rs/raw-window-metal"
readme = "README.md"
keywords = ["window", "metal", "graphics"]
categories = ["game-engines", "graphics"]
exclude = [".github/*"]

[dependencies]
raw-window-handle = "0.6.0"
objc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa = "0.24"
core-graphics = "0.22"

[package.metadata.docs.rs]
targets = [
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
]
