[package]
name = "raw-window-metal"
# Remember to update html_root_url in lib.rs
version = "1.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Interop library between Metal and raw-window-handle"
documentation = "https://docs.rs/raw-window-metal"
repository = "https://github.com/rust-windowing/raw-window-metal"
readme = "README.md"
keywords = ["window", "metal", "graphics"]
categories = ["game-engines", "graphics", "os::macos-apis"]
exclude = [".github/*"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = [
    "NSDictionary",
    "NSGeometry",
    "NSKeyValueObserving",
    "NSObjCRuntime",
    "NSString",
    "NSThread",
    "NSValue",
] }
objc2-quartz-core = { version = "0.2.2", features = [
    "CALayer",
    "CAMetalLayer",
    "objc2-metal",
] }

[dev-dependencies]
raw-window-handle = "0.6.0"

[target.'cfg(target_os = "macos")'.dev-dependencies]
objc2-app-kit = { version = "0.2.2", features = ["NSResponder", "NSView"] }

[target.'cfg(all(target_vendor = "apple", not(target_os = "macos")))'.dev-dependencies]
objc2-ui-kit = { version = "0.2.2", features = ["UIResponder", "UIView"] }

[package.metadata.docs.rs]
targets = [
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-apple-ios-macabi",
    "x86_64-apple-ios",
]
rustdoc-args = ["--cfg", "docsrs"]
